--- a/src/app/inicio/login/login.component.html
+++ b/src/app/inicio/login/login.component.html
@@ -6,8 +6,8 @@
 
 <div [formGroup]="form" style="margin-top: 25px;">
     <mat-form-field>
-        <mat-label>Email ou telefone</mat-label>
-        <input matInput formControlName="email">
+        <mat-label>Telefone</mat-label>
+        <input matInput formControlName="email" type="tel" mask="(00)00000-0000">
     </mat-form-field>
 
     <mat-form-field>
