--- a/src/app/conta_usuario/cupons/cupons.component.html
+++ b/src/app/conta_usuario/cupons/cupons.component.html
@@ -1,18 +1,20 @@
 <div class="col-sm-12">
 
     <div class="row">
+        <div class="col-sm-12" style=" justify-content: center;">
+            <div style="margin-top: 127px;  justify-content: center;">
+                <span *ngIf="itens.length === 0">
+          <div class="col-sm-12 av">
+            Você ainda não tem nenhum cupom
+          </div>
+          <div class="col-sm-12 text-center">
+            <img width="48px" [src]="'../../../assets/images/others/cupom.png'">
+          </div>
+        </span>
 
-        <div style="margin-top: 127px;    margin: auto;">
-            <span *ngIf="itens.length === 0">
-        <div class="col-sm-12 av">
-          Você ainda não tem nenhum cupom
+            </div>
         </div>
-        <div class="col-sm-12 text-center">
-          <img [src]="'../../../assets/images/others/cupom.png'">
-        </div>
-      </span>
 
-        </div>
 
 
 
