--- a/src/app/inicio/capa/capa.component.css
+++ b/src/app/inicio/capa/capa.component.css
@@ -1,11 +1,17 @@
 .logo {
     width: 87px;
-    background-color: #f7f7f7;
     height: 66px;
     background-position: center;
     background-size: 100%;
     margin-top: 9px;
     border-radius: 5px;
+}
+
+.capa {
+    height: 45px;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .c {
@@ -52,6 +58,10 @@
     display: none;
 }
 
+.tabbarbottomDelsuc {
+    display: none;
+}
+
 
 /* Tela menor */
 
@@ -60,15 +70,14 @@
         display: block;
     }
     .logo {
-        width: 87px;
-        background-color: #f7f7f7;
-        height: 66px;
+        width: 60px;
+        height: 60px;
         background-position: center;
         background-size: 100%;
         margin-top: 9px;
-        border-radius: 5px;
+        border-radius: 55px;
         margin: auto;
-        margin-top: 13px;
+        margin-top: -32px;
     }
     .showinMobile {
         display: block;
@@ -78,5 +87,21 @@
         margin-top: 10px;
         width: 100%;
         justify-content: space-evenly;
+    }
+    .tabbarbottomDelsuc {
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-top: 1px solid #c1c1c1;
+        height: 65px;
+        z-index: 1;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .c {
+        border-bottom: none;
     }
 }
