--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -1,14 +1,14 @@
 <div class="col-sm-12 mp0R bMobile" *ngIf="service.getStatusLoaderStore()">
     <div class="col-sm-12 mp0L bMobile" style="padding-right: 0px;">
 
-        <div class="col-sm-12 mp0L bMobile" style="padding-right: 0px;">
+        <div *ngIf="service.getDadosEmpresa().capa" class="col-sm-12 mp0L bMobile hiddenEl" style="padding-right: 0px;">
             <div class="capa col-sm-12 mp0L" [lazyLoad]="service.getDadosEmpresa().capa">
             </div>
         </div>
 
-        <div class="col-sm-12 mp0L dad" style="margin-top: 20px;">
+        <div class="col-sm-12 mp0L dad astr">
             <mat-icon class="cor1">star</mat-icon><span class="cor1"> {{ service.getDadosEmpresa().nota.nota }}
-      </span>({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)
+      </span> <span class="hiddenEl">({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)</span>
         </div>
 
         <div class="c1 col-sm-12 mp0L dad">
@@ -51,30 +51,38 @@
 
         </div>
 
-        <div class="col-sm-12 c5 mp0L bMobile">
-            <mat-form-field appearance="fill" style="width: 100%;">
-                <mat-label>Filtrar catálogo</mat-label>
-                <mat-select #catalogoFilter>
-                    <mat-option value="">
-                        Sem filtro
-                    </mat-option>
-                    <mat-option *ngFor="let item of service.getDadosEmpresa().categorias" [value]="item.id">
-                        {{ item.nome }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
+        <div class="col-sm-12">
+            <div class="row">
+                <div class="col-sm-6">
+                    <mat-form-field style="width:100%; margin-top: 4px;">
+                        <mat-label>Filtrar catálogo</mat-label>
+                        <mat-select #catalogoFilter>
+                            <mat-option value="">
+                                Sem filtro
+                            </mat-option>
+                            <mat-option *ngFor="let item of service.getDadosEmpresa().categorias" [value]="item.id">
+                                {{ item.nome }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
 
-        <div class="col-sm-12 mp0L mp0R" style="height: 70px; background-color: rgb(255, 255, 255);">
-            <div class="col-sm-12 c5 mp0L bMobile item2faz" id="item2fix">
+                <div class="col-sm-6 searchprodmob">
+                    <div class="col-sm-12 c5 item2faz" id="item2fix">
 
-                <mat-form-field class="infiltroi">
-                    <mat-label> Filtrar item </mat-label>
-                    <input matInput placeholder="Nome do item" #filterProduct>
-                </mat-form-field>
+                        <mat-form-field class="infiltroi" color="primary">
+                            <mat-label> Filtrar item </mat-label>
+                            <input matInput placeholder="Nome do item" #filterProduct>
+                            <mat-icon matSuffix>search</mat-icon>
+                        </mat-form-field>
 
+                    </div>
+                </div>
             </div>
         </div>
+
+
+
 
 
 
@@ -82,33 +90,39 @@
     </div>
 
 
-
-    <div class="row mp0R bMobile">
+    <!--Produtos para descktop-->
+    <div class="row mp0R bMobile hiddenEl">
         <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value">
             <div class="aicn col-sm-12"> {{ item.nome }} </div>
             <div class="row mp0R">
                 <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens | filterId:filterProduct.value">
-                    <div class="item col-sm-12" (click)="openItem(product)">
-                        <div class="row">
+                    <a href="javascript:;" style="text-decoration: none;">
+                        <div class="item col-sm-12" (click)="openItem(product)">
+                            <div class="row">
 
-                            <div class="col-sm-5 imgProdMobile">
-                                <div class="item-bg-img" [lazyLoad]="product.imagem"></div>
+
+                                <div class="col-sm-7">
+                                    <div class="item-01"> {{ product.nome | slice:0:26}} </div>
+                                    <div class="item-02"> {{ product.descricao }} </div>
+                                    <div class="item-03">
+                                        <div> {{ product.preco | currency:'BRL':true }}</div>
+                                        <div>
+                                            <div class="item033ind" *ngIf="product.esgotado || product.esconder">
+                                                <mat-icon>info</mat-icon> Indisponível
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-5">
+                                    <div class="item-bg-img" [lazyLoad]="product.imagem"></div>
+                                </div>
+
                             </div>
 
-                            <div class="col-sm-7">
-                                <div class="item-01"> {{ product.nome | slice:0:26}} </div>
-                                <div class="item-02"> {{ product.descricao }} </div>
-                                <div class="item-03"> {{ product.preco | currency:'BRL':true }} </div>
-                            </div>
-
-                            <div class="col-sm-5 hiddenEl">
-                                <div class="item-bg-img" [lazyLoad]="product.imagem"></div>
-                            </div>
 
                         </div>
-
-
-                    </div>
+                    </a>
                 </div>
 
 
@@ -116,6 +130,35 @@
 
 
         </div>
+
+    </div>
+
+    <!--produtos para mobile-->
+    <div *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value" class="elementMobileShow">
+
+        <div class="stycatItem"> {{ item.nome }} </div>
+
+        <div class="itemProduct" *ngFor="let product of item.itens | filterId:filterProduct.value" (click)="openItem(product)">
+            <div class="adate-ite">
+                <div class="idescpod">
+                    <div class="inameprod"> {{ product.nome | slice:0:26}} </div>
+                    <div class="idescrod">
+                        {{ product.descricao | slice:0:160 }}
+                        <div class="item033ind" *ngIf="product.esgotado || product.esconder">
+                            <mat-icon>info</mat-icon> Indisponível
+                        </div>
+                    </div>
+                </div>
+                <div class="iimgpod" [lazyLoad]="product.imagem"> </div>
+            </div>
+
+            <div class="ipriceprod"> {{ product.preco | currency:'BRL':true }}
+
+            </div>
+            <div class="lineitea"></div>
+        </div>
+
+
 
     </div>
 
