--- a/src/app/inicio/login/login.component.css
+++ b/src/app/inicio/login/login.component.css
@@ -29,10 +29,11 @@ mat-form-field {
     justify-content: flex-end;
     align-items: center;
     padding-top: 10px;
-    /* background: aliceblue; */
     gap: 10px;
     margin-top: 23px;
-    color: #8c8c8c;
+    color: #464646;
+    justify-content: center;
+    font-size: 12px;
 }
 
 .btl {
