--- a/src/app/inicio/select-address/select-address.component.css
+++ b/src/app/inicio/select-address/select-address.component.css
@@ -56,3 +56,14 @@ mat-form-field {
     margin-bottom: 10px;
     margin-top: 10px;
 }
+
+.itemBfd {
+    background-color: #ffffff;
+    padding: 5px;
+    color: #564a46;
+    margin-top: 1px;
+    border-bottom: 1px solid #e0d3d3;
+    font-weight: 540;
+    display: flex;
+    gap: 10px;
+}
