--- a/src/app/inicio/user-registration/user-registration.component.css
+++ b/src/app/inicio/user-registration/user-registration.component.css
@@ -15,9 +15,7 @@
 }
 
 .aimg {
-    width: 60px;
     padding-top: 18px;
-    height: 78px;
 }
 
 .imglogo {
@@ -26,5 +24,11 @@
 }
 
 .all {
-    background-color: #673AB7;
+    background-color: #3F51B5;
+}
+
+@media(max-width: 600px) {
+    .all {
+        background-color: #3F51B5;
+    }
 }
