--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,10 @@ body {
     animation: fadeinimg 3s;
 }
 
+.elementMobileShow {
+    display: none;
+}
+
 @keyframes fadeinimg {
     from {
         opacity: 0;
@@ -55,5 +59,8 @@ body {
     }
     .hiddenEl {
         display: none;
+    }
+    .elementMobileShow {
+        display: block;
     }
 }
